# meow-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  M2_QA_BASELINE.txt  README.md  bench.sh  config-bench.yaml  config-local.yaml.bak  config.example.yaml
.cargo/: audit.toml
.github/workflows/: audit.yml  bench-daily.yml  bench.yml  coverage.yml  pages.yml  publish.yml  release.yml  test.yml
crates/meow-anytls/: Cargo.toml  LICENSE  README.md
crates/meow-api/: Cargo.toml
crates/meow-app/: Cargo.toml
crates/meow-common/: Cargo.toml
crates/meow-config/: Cargo.toml
crates/meow-listener/: Cargo.toml
crates/meow-listener/src/: http_proxy.rs  lib.rs  mixed.rs  socks5.rs  socks5_udp.rs
crates/meow-listener/src/tproxy/: firewall.rs  mod.rs  orig_dest.rs
crates/meow-listener/src/tun/: device.rs  mod.rs  route.rs  udp.rs
crates/meow-listener/tests/: socks5_handshake.rs
crates/meow-proxy/: Cargo.toml
crates/meow-proxy/src/: anytls_adapter.rs  direct.rs  ech_tls_tunnel.rs  health.rs  http_adapter.rs  hysteria2_adapter.rs  lib.rs  shadowsocks_adapter.rs  socks5_adapter.rs  trojan.rs  v2ray_plugin.rs  vless_adapter.rs
crates/meow-proxy/src/group/: dialer_proxy.rs  fallback.rs  mod.rs  selector.rs  selector_store.rs  test_support.rs  urltest.rs
crates/meow-proxy/src/hysteria2/: client.rs  config.rs  error.rs  mod.rs  proto.rs  socket.rs  tcp.rs  tls.rs  udp.rs
crates/meow-proxy/src/snell/: adapter.rs  cipher.rs  mod.rs  pool.rs  protocol.rs  udp.rs  v3.rs  v4.rs
crates/meow-proxy/src/vless/: conn.rs  header.rs  vision.rs
crates/meow-proxy/src/vmess/: body.rs  conn.rs  header.rs  kdf.rs  mod.rs
crates/meow-proxy/tests/: anytls_leak.rs  http_adapter_integration.rs  hysteria2_integration.rs  shadowsocks_integration.rs  snell_integration.rs  snell_smoke.rs  socks5_adapter_integration.rs
crates/meow-rules/: Cargo.toml
crates/meow-transport/: Cargo.toml
crates/meow-tunnel/: Cargo.toml
crates/mihomo-api/: Cargo.toml
crates/mihomo-api/src/: routes.rs
crates/mihomo-api/tests/: api_test.rs
crates/mihomo-app/: Cargo.toml
crates/mihomo-app/src/: lib.rs  main.rs
crates/mihomo-app/tests/: config_smoke.rs  systemd_config_test.rs
crates/mihomo-bench/: Cargo.toml
crates/mihomo-bench/src/: bench_connrate.rs  bench_memory.rs  bench_throughput.rs  echo_server.rs  main.rs  results.rs  socks5_client.rs
crates/mihomo-common/: Cargo.toml
crates/mihomo-config/: Cargo.toml
crates/mihomo-config/src/: auth.rs  dns_parser.rs  ech_dns.rs  geodata.rs  internal_http.rs  lib.rs  proxy_parser.rs  proxy_provider.rs  raw.rs  rule_parser.rs  rule_provider.rs  sub_rules_parser.rs  subscription.rs
crates/mihomo-config/tests/: config_persistence_test.rs  config_test.rs  ech_dns_test.rs  sniffer_config_test.rs  vless_config_test.rs
crates/mihomo-dns/: Cargo.toml
crates/mihomo-dns/src/: cache.rs  client.rs  fakeip.rs  lib.rs  resolver.rs  server.rs  upstream.rs
crates/mihomo-dns/tests/: cache_soak.rs  dns_cache_test.rs  doh_dot_integration.rs  proxy_routed_dns.rs
crates/mihomo-listener/: Cargo.toml
crates/mihomo-listener/src/: http_proxy.rs  mixed.rs  sniffer.rs  socks5.rs
crates/mihomo-listener/src/tproxy/: firewall.rs  mod.rs
crates/mihomo-listener/tests/: http_connect.rs  mixed_dispatch.rs  socks5_handshake.rs
crates/mihomo-listener/tests/common/: mod.rs
crates/mihomo-proxy/: Cargo.toml
crates/mihomo-proxy/src/: anytls_adapter.rs  direct.rs  health.rs  http_adapter.rs  hysteria2_adapter.rs  lib.rs  shadowsocks_adapter.rs  simple_obfs.rs  socks5_adapter.rs  trojan.rs  v2ray_plugin.rs  vless_adapter.rs
crates/mihomo-proxy/src/group/: fallback.rs  load_balance.rs  relay.rs  selector.rs  urltest.rs
crates/mihomo-proxy/src/vless/: conn.rs  header.rs  vision.rs
crates/mihomo-proxy/tests/: anytls_integration.rs  shadowsocks_integration.rs  trojan_integration.rs  v2ray_plugin_integration.rs  vless_integration.rs
crates/mihomo-rules/: Cargo.toml
crates/mihomo-rules/benches/: iprange_parser_bench.rs  rules_bench.rs
crates/mihomo-rules/src/: country_index.rs  domain_wildcard.rs  dscp.rs  geoip.rs  geosite.rs  geosite_rule.rs  in_name.rs  in_port.rs  in_type.rs  in_user.rs  ip_asn.rs  ip_suffix.rs  ipcidr.rs  lib.rs  logic.rs  network.rs  parser.rs  port.rs  process_path.rs  rule_set.rs  rule_set_rule.rs  src_geoip.rs  sub_rule.rs  uid.rs
crates/mihomo-rules/tests/: rules_test.rs
crates/mihomo-transport/: Cargo.toml
crates/mihomo-transport/src/: error.rs  h2.rs  lib.rs  tls.rs  ws.rs
crates/mihomo-transport/tests/: boring_tls_test.rs  crate_invariants_test.rs  grpc_test.rs  h2_test.rs  httpupgrade_test.rs  tls_test.rs
crates/mihomo-transport/tests/support/: log_capture.rs  loopback.rs
crates/mihomo-trie/: Cargo.toml
crates/mihomo-tunnel/: Cargo.toml
crates/mihomo-tunnel/benches/: rules_bench.rs  udp_bench.rs
crates/mihomo-tunnel/src/: lib.rs  match_engine.rs  statistics.rs  tcp.rs  tunnel.rs  udp.rs
crates/mihomo-tunnel/tests/: pre_resolve_test.rs  raii_guard_test.rs  statistics_test.rs
docs/: RELEASING.md  ci-status.md  gap-analysis.md  index.html  migration-from-go-mihomo.md  mihomo-api-compatibility.md  openwrt.md  roadmap.md  tproxy-gateway.md  tproxy-macos.md  tun.md
docs/adr/: 0003-provider-refresh-substrate.md  0004-metrics-cardinality.md  0005-runtime-event-broadcaster.md  0009-cleanup-scope.md  0010-m1-hygiene-and-gates-addendum.md  0010-m1-hygiene-and-gates.md  0011-m2-footprint-targets.md  0013-fakeip-https-svcb-handling.md
docs/benchmarks/: baseline-2026-07-15.json  footprint-alloc-baseline.md  footprint-rss-baseline.md  footprint-types-baseline.md  hardware.md  index.md  m1-addendum-lint-probe.md  m2-exit-local.md  m2-exit-status-preliminary.md  methodology.md  performance-audit-2026-06.md  rule-ir-pi-2026-07.md  smallvec-audit-findings.md
scripts/: README.md  tproxy-gateway-macos.sh  tproxy-local-macos.sh  verify-tproxy-setup.sh  verify-tproxy-test.sh
tests/: test_memleak_proxy.sh  test_stress_gstatic.sh  test_stress_ss_ws_tls.sh  test_tproxy_qemu.sh
website/: index.md  package.json
(+185 files in other folders)
