[package]
name = "mihomo-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
mihomo-common = { workspace = true }
mihomo-tunnel = { workspace = true }
mihomo-dns = { workspace = true, default-features = false }
mihomo-config = { workspace = true, default-features = false }
mihomo-proxy = { workspace = true, default-features = false }
mihomo-rules = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
subtle = "2"
sysinfo = "0.32"
time = { workspace = true }
base64 = "0.22"
prometheus-client = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
mihomo-trie = { workspace = true }
tower = { workspace = true }
http-body-util = "0.1"
tempfile = "3"
async-trait = { workspace = true }
tokio-tungstenite = { workspace = true }
