[package]
name = "mihomo-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
boring-tls = ["mihomo-config/boring-tls"]

[[bin]]
name = "mihomo"
path = "src/main.rs"

[dependencies]
mihomo-common = { workspace = true }
mihomo-config = { workspace = true }
mihomo-tunnel = { workspace = true }
mihomo-listener = { workspace = true }
mihomo-dns = { workspace = true }
mihomo-api = { workspace = true }
mihomo-proxy = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
parking_lot = { workspace = true }
rustls = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
serde_yaml = { workspace = true }
mihomo-config = { workspace = true }
libc = "0.2"
