[package]
name = "mihomo-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["full"]
boring-tls = ["mihomo-config/boring-tls"]

# Protocol features — forwarded to mihomo-proxy and mihomo-config
ss = ["mihomo-config/ss", "mihomo-proxy/ss"]
trojan = ["mihomo-config/trojan", "mihomo-proxy/trojan"]
vless = ["mihomo-config/vless", "mihomo-proxy/vless"]
vless-vision = ["vless", "mihomo-config/vless-vision", "mihomo-proxy/vless-vision"]

# DNS
dns-server = ["mihomo-dns/dns-server"]
dns-encrypted = ["mihomo-dns/encrypted"]

# Listener features — forwarded to mihomo-listener
listener-http = ["mihomo-listener/listener-http"]
listener-socks5 = ["mihomo-listener/listener-socks5"]
listener-tproxy = ["mihomo-listener/listener-tproxy"]
listener-mixed = ["mihomo-listener/listener-mixed"]

# Convenience bundles
minimal = ["ss", "trojan", "dns-server", "listener-mixed"]
full = [
    "ss", "trojan", "vless", "vless-vision",
    "dns-server", "dns-encrypted",
    "listener-http", "listener-socks5", "listener-tproxy", "listener-mixed",
]

[[bin]]
name = "mihomo"
path = "src/main.rs"

[dependencies]
mihomo-common = { workspace = true }
mihomo-config = { workspace = true, default-features = false }
mihomo-rules = { workspace = true }
mihomo-tunnel = { workspace = true }
mihomo-listener = { workspace = true, default-features = false }
mihomo-dns = { workspace = true, default-features = false }
mihomo-api = { workspace = true }
mihomo-proxy = { workspace = true, default-features = false }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
rustls = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
serde_yaml = { workspace = true }
mihomo-config = { workspace = true }
libc = "0.2"
