[package]
name = "mihomo-bench"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mihomo-bench"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
