[package]
name = "mihomo-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["vless", "vless-vision"]
vless = ["mihomo-proxy/vless"]
vless-vision = ["vless", "mihomo-proxy/vless-vision"]
boring-tls = ["mihomo-transport/boring-tls"]

[dependencies]
mihomo-common = { workspace = true }
mihomo-trie = { workspace = true }
mihomo-dns = { workspace = true }
mihomo-rules = { workspace = true }
mihomo-proxy = { workspace = true }
mihomo-transport = { workspace = true, features = ["grpc", "h2", "httpupgrade"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
maxminddb = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
tracing-subscriber = { workspace = true }
