[package]
name = "mihomo-dns"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["encrypted"]
encrypted = ["hickory-resolver/tls-ring", "hickory-resolver/https-ring"]

[dependencies]
mihomo-common = { workspace = true }
mihomo-trie = { workspace = true }
tokio = { workspace = true }
hickory-resolver = { workspace = true }
hickory-server = { workspace = true }
hickory-proto = { workspace = true }
lru = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
ipnet = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
