[package]
name = "mihomo-listener"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["listener-http", "listener-socks5", "listener-mixed", "listener-tproxy"]
listener-http = []
listener-socks5 = []
listener-tproxy = []
listener-mixed = ["listener-http", "listener-socks5"]

[dependencies]
mihomo-common = { workspace = true }
mihomo-trie = { workspace = true }
mihomo-tunnel = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
mihomo-dns = { workspace = true }
mihomo-trie = { workspace = true }

[lints]
workspace = true
