[package]
name = "mihomo-rules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
mihomo-common = { workspace = true }
mihomo-trie = { workspace = true }
maxminddb = { workspace = true }
ipnet = { workspace = true }
iprange = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
zstd = { workspace = true }

[[bench]]
name = "rules_bench"
harness = false

[[bench]]
name = "iprange_parser_bench"
harness = false

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
