[package]
name = "mihomo-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Reusable composable stream-transport layers (TLS, WS, gRPC, H2, HTTPUpgrade) for mihomo-rust"

# ADR-0001: this crate is a leaf — no dep on mihomo-proxy / mihomo-dns / mihomo-config.
# `cargo tree -p mihomo-transport` must show only `mihomo-common` from our workspace.

[features]
default = ["tls", "ws"]
tls = [
    "dep:tokio-rustls",
    "dep:rustls",
    "dep:webpki-roots",
    "dep:rustls-pemfile",
]
# boring-tls: enables BoringSSL-backed TLS for ECH and uTLS fingerprinting.
# Requires cmake 3.14+ and a C++ compiler at build time (boring-sys vendors BoringSSL).
# When absent, TlsConfig.fingerprint keeps the existing stub-warn behaviour and
# TlsConfig.ech returns TransportError::Config at construction time.
boring-tls = [
    "tls",
    "dep:boring",
    "dep:tokio-boring",
    "dep:boring-sys",
    "dep:rand",
]
ws = [
    "dep:tokio-tungstenite",
    "dep:futures-util",
    "dep:base64",
]
grpc = [
    "dep:h2",
    "dep:http",
    "dep:rand",
]
h2 = [
    "dep:h2",
    "dep:http",
    "dep:rand",
]
httpupgrade = [
    "dep:httparse",
]

[dependencies]
mihomo-common = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }

# tls feature
tokio-rustls    = { workspace = true, optional = true }
rustls          = { workspace = true, optional = true }
webpki-roots    = { workspace = true, optional = true }
rustls-pemfile  = { version = "2", optional = true }

# ws feature
tokio-tungstenite = { workspace = true, optional = true }
futures-util      = { workspace = true, optional = true }
base64            = { workspace = true, optional = true }

# grpc + h2 features (share the h2 crate; see ADR-0001 §5 note on intentional dep sharing)
h2   = { version = "0.4", optional = true }
http = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

# httpupgrade feature
httparse = { version = "1", optional = true }

# boring-tls feature
boring       = { workspace = true, optional = true }
tokio-boring = { workspace = true, optional = true }
boring-sys   = { version = "5.0.2", optional = true }

[dev-dependencies]
tokio        = { workspace = true }
tokio-rustls = { workspace = true }
rustls       = { workspace = true }
rustls-pemfile = "2"
rcgen        = "0.13"
md5          = "0.8"
# Log-capture strategy: home-rolled MakeWriter in tests/support/log_capture.rs using
# tracing_subscriber scoped subscribers, documented there.  tracing-test is NOT used
# because it installs a process-global subscriber that cross-contaminates parallel test
# binaries (each test file in tests/ is a separate binary).
tracing-subscriber = { workspace = true, features = ["env-filter"] }
regex = { workspace = true }
base64 = { workspace = true }

[[test]]
name = "boring_tls_test"
required-features = ["boring-tls"]

[[test]]
name = "grpc_test"
required-features = ["grpc"]

[[test]]
name = "h2_test"
required-features = ["h2"]

[[test]]
name = "httpupgrade_test"
required-features = ["httpupgrade"]
