[package]
name = "mihomo-tunnel"
version.workspace = true
edition.workspace = true

[dependencies]
mihomo-common = { workspace = true }
mihomo-dns = { workspace = true }
mihomo-rules = { workspace = true }
mihomo-proxy = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
mihomo-trie = { workspace = true }
